Add cleanup data for numbers

--- a/data-processing/combiner/combiner.ipynb
+++ b/data-processing/combiner/combiner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5559,7 +5559,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop row if subzone value is 'UNKNOWN'\n",
+    "merged_df_with_unknowns = pd.read_csv(\"merged-data-final.csv\")\n",
+    "merged_df_with_unknowns = merged_df_with_unknowns[merged_df_with_unknowns['subzone'] != 'UNKNOWN']\n",
+    "merged_df_with_unknowns.to_csv('merged-data-final.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -5594,7 +5606,6 @@
        "      <th>elevation</th>\n",
        "      <th>temp_2024_04_07_min</th>\n",
        "      <th>...</th>\n",
-       "      <th>built-up</th>\n",
        "      <th>bare / sparse vegetation</th>\n",
        "      <th>snow and ice</th>\n",
        "      <th>permanent water bodies</th>\n",
@@ -5604,6 +5615,7 @@
        "      <th>min_ndvi</th>\n",
        "      <th>mean_ndvi</th>\n",
        "      <th>max_ndvi</th>\n",
+       "      <th>avg_temp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -5629,7 +5641,7 @@
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
-       "      <td>-</td>\n",
+       "      <td>27.925964</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -5653,7 +5665,7 @@
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
-       "      <td>-</td>\n",
+       "      <td>29.608313</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -5677,7 +5689,7 @@
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
-       "      <td>-</td>\n",
+       "      <td>28.891881</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -5701,7 +5713,7 @@
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
-       "      <td>-</td>\n",
+       "      <td>29.216001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -5716,16 +5728,16 @@
        "      <td>12</td>\n",
        "      <td>30.168782</td>\n",
        "      <td>...</td>\n",
-       "      <td>295.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.048891</td>\n",
-       "      <td>0.098567</td>\n",
-       "      <td>0.150058</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.04889138175</td>\n",
+       "      <td>0.09856656256</td>\n",
+       "      <td>0.1500582635</td>\n",
+       "      <td>30.699513</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -5764,16 +5776,16 @@
        "      <td>0</td>\n",
        "      <td>28.451387</td>\n",
        "      <td>...</td>\n",
-       "      <td>186.0</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.049277</td>\n",
-       "      <td>0.085803</td>\n",
-       "      <td>0.126488</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.04927733388</td>\n",
+       "      <td>0.08580342632</td>\n",
+       "      <td>0.1264881847</td>\n",
+       "      <td>30.146774</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1401</th>\n",
@@ -5797,7 +5809,7 @@
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
-       "      <td>-</td>\n",
+       "      <td>28.726776</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1402</th>\n",
@@ -5812,16 +5824,16 @@
        "      <td>0</td>\n",
        "      <td>28.451387</td>\n",
        "      <td>...</td>\n",
-       "      <td>186.0</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.049277</td>\n",
-       "      <td>0.085803</td>\n",
-       "      <td>0.126488</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.04927733388</td>\n",
+       "      <td>0.08580342632</td>\n",
+       "      <td>0.1264881847</td>\n",
+       "      <td>29.484788</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1404</th>\n",
@@ -5836,16 +5848,16 @@
        "      <td>8</td>\n",
        "      <td>28.880736</td>\n",
        "      <td>...</td>\n",
-       "      <td>571.0</td>\n",
-       "      <td>87.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.033824</td>\n",
-       "      <td>0.064864</td>\n",
-       "      <td>0.103345</td>\n",
+       "      <td>87</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.03382393673</td>\n",
+       "      <td>0.06486375598</td>\n",
+       "      <td>0.103345118</td>\n",
+       "      <td>29.175639</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1405</th>\n",
@@ -5860,20 +5872,20 @@
        "      <td>8</td>\n",
        "      <td>28.880736</td>\n",
        "      <td>...</td>\n",
-       "      <td>571.0</td>\n",
-       "      <td>87.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.033824</td>\n",
-       "      <td>0.064864</td>\n",
-       "      <td>0.103345</td>\n",
+       "      <td>87</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.03382393673</td>\n",
+       "      <td>0.06486375598</td>\n",
+       "      <td>0.103345118</td>\n",
+       "      <td>28.823689</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1169 rows × 234 columns</p>\n",
+       "<p>1169 rows × 60 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -5916,57 +5928,55 @@
        "1404               QUEENSTOWN     CENTRAL REGION          8   \n",
        "1405               QUEENSTOWN     CENTRAL REGION          8   \n",
        "\n",
-       "      temp_2024_04_07_min  ...  built-up  bare / sparse vegetation  \\\n",
-       "0               28.022039  ...         -                         -   \n",
-       "1               28.451387  ...         -                         -   \n",
-       "2               28.880736  ...         -                         -   \n",
-       "3               29.310085  ...         -                         -   \n",
-       "4               30.168782  ...     295.0                       4.0   \n",
-       "...                   ...  ...       ...                       ...   \n",
-       "1400            28.451387  ...     186.0                      61.0   \n",
-       "1401            28.880736  ...         -                         -   \n",
-       "1402            28.451387  ...     186.0                      61.0   \n",
-       "1404            28.880736  ...     571.0                      87.0   \n",
-       "1405            28.880736  ...     571.0                      87.0   \n",
+       "      temp_2024_04_07_min  ...  bare / sparse vegetation  snow and ice  \\\n",
+       "0               28.022039  ...                         -             -   \n",
+       "1               28.451387  ...                         -             -   \n",
+       "2               28.880736  ...                         -             -   \n",
+       "3               29.310085  ...                         -             -   \n",
+       "4               30.168782  ...                         4             0   \n",
+       "...                   ...  ...                       ...           ...   \n",
+       "1400            28.451387  ...                        61             0   \n",
+       "1401            28.880736  ...                         -             -   \n",
+       "1402            28.451387  ...                        61             0   \n",
+       "1404            28.880736  ...                        87             0   \n",
+       "1405            28.880736  ...                        87             0   \n",
        "\n",
-       "      snow and ice  permanent water bodies  herbaceous wetland  mangroves  \\\n",
-       "0                -                       -                   -          -   \n",
-       "1                -                       -                   -          -   \n",
-       "2                -                       -                   -          -   \n",
-       "3                -                       -                   -          -   \n",
-       "4              0.0                     0.0                 0.0        0.0   \n",
-       "...            ...                     ...                 ...        ...   \n",
-       "1400           0.0                    56.0                 0.0        0.0   \n",
-       "1401             -                       -                   -          -   \n",
-       "1402           0.0                    56.0                 0.0        0.0   \n",
-       "1404           0.0                    30.0                 0.0        0.0   \n",
-       "1405           0.0                    30.0                 0.0        0.0   \n",
+       "      permanent water bodies  herbaceous wetland  mangroves  moss and lichen  \\\n",
+       "0                          -                   -          -                -   \n",
+       "1                          -                   -          -                -   \n",
+       "2                          -                   -          -                -   \n",
+       "3                          -                   -          -                -   \n",
+       "4                          0                   0          0                0   \n",
+       "...                      ...                 ...        ...              ...   \n",
+       "1400                      56                   0          0                0   \n",
+       "1401                       -                   -          -                -   \n",
+       "1402                      56                   0          0                0   \n",
+       "1404                      30                   0          0                0   \n",
+       "1405                      30                   0          0                0   \n",
        "\n",
-       "      moss and lichen  min_ndvi  mean_ndvi  max_ndvi  \n",
-       "0                   -         -          -         -  \n",
-       "1                   -         -          -         -  \n",
-       "2                   -         -          -         -  \n",
-       "3                   -         -          -         -  \n",
-       "4                 0.0  0.048891   0.098567  0.150058  \n",
-       "...               ...       ...        ...       ...  \n",
-       "1400              0.0  0.049277   0.085803  0.126488  \n",
-       "1401                -         -          -         -  \n",
-       "1402              0.0  0.049277   0.085803  0.126488  \n",
-       "1404              0.0  0.033824   0.064864  0.103345  \n",
-       "1405              0.0  0.033824   0.064864  0.103345  \n",
+       "           min_ndvi      mean_ndvi      max_ndvi   avg_temp  \n",
+       "0                 -              -             -  27.925964  \n",
+       "1                 -              -             -  29.608313  \n",
+       "2                 -              -             -  28.891881  \n",
+       "3                 -              -             -  29.216001  \n",
+       "4     0.04889138175  0.09856656256  0.1500582635  30.699513  \n",
+       "...             ...            ...           ...        ...  \n",
+       "1400  0.04927733388  0.08580342632  0.1264881847  30.146774  \n",
+       "1401              -              -             -  28.726776  \n",
+       "1402  0.04927733388  0.08580342632  0.1264881847  29.484788  \n",
+       "1404  0.03382393673  0.06486375598   0.103345118  29.175639  \n",
+       "1405  0.03382393673  0.06486375598   0.103345118  28.823689  \n",
        "\n",
-       "[1169 rows x 234 columns]"
+       "[1169 rows x 60 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Drop row if subzone value is 'UNKNOWN'\n",
-    "merged_df_3 = merged_df_3[merged_df_3['subzone'] != 'UNKNOWN']\n",
-    "merged_df_3"
+    "merged_df_with_unknowns "
    ]
   },
   {
@@ -5979,10 +5989,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train test split on merged data\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "y = merged_df_with_unknowns['avg_temp']\n",
+    "X = merged_df_with_unknowns.drop(columns=['avg_temp'])\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "X_train.to_csv('X_train.csv', index=False)\n",
+    "X_test.to_csv('X_test.csv', index=False)\n",
+    "y_train.to_csv('y_train.csv', index=False)\n",
+    "y_test.to_csv('y_test.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
