--- a/models/adaboost-regression/adaboost-regression-v2.ipynb
+++ b/models/adaboost-regression/adaboost-regression-v2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gradient Boosting Regression Model (Version 1)\n",
+    "# Adaptive Boosting Regression Model (Version 2)\n",
     "\n",
     "Regression counterpart of Gradient Boosted Tree, supported by [`sklearn.ensemble.GradientBoostingRegressor`](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.GradientBoostingRegressor.html) function of ScikitLearn\n",
     "\n",
