Fix Markdown for XGBoost v1

--- a/models/xgboost-regression/xgboost-regression-v1.ipynb
+++ b/models/xgboost-regression/xgboost-regression-v1.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Gradient Boosting Regression Model (Version 1)\n",
+        "# XGBoost Regression Model (Version 1)\n",
         "\n",
         "Regression counterpart of Extreme Gradient Boosting, optimised from distributed gradient boosting libraries, supported by [`xgboost.XGBRegressor`](https://docs.getml.com/1.1.0/api/getml.predictors.XGBoostRegressor.html) function by getml\n",
         "\n",
