Update Markdown Description

--- a/models/adaboost-regression/adaboost-regression-v2.ipynb
+++ b/models/adaboost-regression/adaboost-regression-v2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Adaptive Boosting Regression Model (Version 2)\n",
     "\n",
-    "Regression counterpart of Gradient Boosted Tree, supported by [`sklearn.ensemble.GradientBoostingRegressor`](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.GradientBoostingRegressor.html) function of ScikitLearn\n",
+    "Regression counterpart of Adaptive Boosted Tree, supported by [`sklearn.ensemble.AdaBoostRegressor`](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.AdaBoostRegressor.html) function of ScikitLearn\n",
     "\n",
     "### Summary\n",
     "\n",
