--- a/models/xgboost-regression/xgboost-regression-v2.ipynb
+++ b/models/xgboost-regression/xgboost-regression-v2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# XGBoost Regression Model (Version 2)\n",
     "\n",
-    "Regression counterpart of Gradient Boosted Tree, supported by [`sklearn.ensemble.GradientBoostingRegressor`](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.GradientBoostingRegressor.html) function of ScikitLearn\n",
+    "Regression counterpart of Extreme Gradient Boosting, optimised from distributed gradient boosting libraries, supported by [`xgboost.XGBRegressor`](https://docs.getml.com/1.1.0/api/getml.predictors.XGBoostRegressor.html) function by getml\n",
     "\n",
     "### Summary\n",
     "\n",
